k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app
  namespace: devops-task

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app

  template:
    metadata:
      labels:
        app: app

    spec:
      containers:
        - name: app
          image: devops-task-2-app:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          startupProbe:
             httpGet:
               path: /live
               port: 8000
             failureThreshold: 30
             periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /live
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
