k8s/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app
  namespace: devops-task

spec:
  selector:
    app: app

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
